--- a/include/navbar.html
+++ b/include/navbar.html
@@ -36,11 +36,8 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/Blog/jesuslife.html">JesusLife</a></li>
-                        <li><a class="dropdown-item" href="/Blog/technology.html">Technology</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="/Blog/chelsea.html">Chelsea</a></li>
+                        <li><a class="dropdown-item" href="/Blog/journeys.html">The Journey</a></li>
+                        <li><a class="dropdown-item" href="/Blog/lessons.html">Lessons</a></li>
                     </ul>
                 </li>
             </ul>
