adds all links, pages and images

--- a/include/navbar.html
+++ b/include/navbar.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="/CSS/styles.css">
     <script src="/CSS/bootstrap/js/bootstrap.bundle.js"></script>
 </head>
-
 </html>
+<body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">SavedKuchana</a>
+        <a class="navbar-brand" href="/about.html">SavedKuchana</a>
         <button class="navbar-toggler" type="button" 
         data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" 
@@ -27,7 +27,7 @@
                     <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/about.html">About Me</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -37,7 +37,7 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/Blog/jesuslife.html">JesusLife</a></li>
                         <li><a class="dropdown-item" href="/Blog/journeys.html">The Journey</a></li>
-                        <li><a class="dropdown-item" href="/Blog/lessons.html">Lessons</a></li>
+                        <li><a class="dropdown-item" href="/Blog/walokoka.html">Walokoka?</a></li>
                     </ul>
                 </li>
             </ul>
