--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,11 +1,101 @@
 h1 {
     color:blue;
-    text-align: right;
+    text-align: center;
     font-family: 'Times New Roman', Times, serif ;
   }
   p {
     font-family: verdana;
     font-size: 25px;
-    text-align: right;
+    text-align: center;
     color: antiquewhite;
   }
+  footer {
+    text-align: center;
+    padding: 50px;
+    background-color: darkslategrey;
+    color: white;
+    
+  }
+#slider-container {
+  padding-top: 70px;
+}
+
+.container {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: center;
+}
+
+h1 {
+  margin-top: 0;
+}
+
+form {
+  margin-top: 20px;
+}
+
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #b3006e;
+}
+
+button:active {
+  transform: translateY(1px);
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+}
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+input[type="text"], textarea {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+p {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: black;
+  background-color: lightsteelblue;
+}
